--- a/blocks/sub-categories/sub-categories.css
+++ b/blocks/sub-categories/sub-categories.css
@@ -18,7 +18,7 @@
   margin-left: 0.5rem;
   width: 20px;
   height: 1em;
-  background: #fff;
+  background: var(--background-color);
   content: '';
   /* stylelint-disable-next-line property-no-vendor-prefix */
   -webkit-mask: url('../../icons/arrow.svg') center / 100% 100%;
